feat: rename repo

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-  "heading": "GitHub Repositories Searcher",
   "label": "Repository Name",
+  "heading": "Crypto Collectable Wallet",
   "noMoreData": "No more data"
 }
