feat: add profile page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
   "heading": "Crypto Collectable Wallet",
-  "noMoreData": "No more data"
+  "noMoreData": "No more data",
+  "permalink": "PERMALINK"
 }
